# neko-rewrite

./: .gitignore  Cargo.toml  Dockerfile  rustfmt.toml
core/: Cargo.toml
core/src/: framework.rs  hasher.rs  lib.rs  macros.rs  module.rs
modules/axum/: Cargo.toml
modules/axum/src/: module.rs
modules/cron/: Cargo.toml
modules/cron/src/: lib.rs  macros.rs  module.rs
modules/fluent/: Cargo.toml
modules/fluent/src/: module.rs
modules/poise/: Cargo.toml
modules/poise/src/: lib.rs  macros.rs  module.rs
modules/reqwest/: Cargo.toml
modules/reqwest/src/: macros.rs  module.rs
modules/sqlx/: Cargo.toml
modules/sqlx/src/: macros.rs  module.rs
plugins/deezer_library/: Cargo.toml
plugins/deezer_library/src/: module.rs  queries.rs  schema.rs
plugins/discord_cache/: Cargo.toml
plugins/discord_cache/src/: handler.rs  module.rs  schema.rs
plugins/discord_roles/: Cargo.toml
plugins/discord_roles/src/: commands.rs  handler.rs  module.rs  queries.rs  schema.rs
plugins/discord_whitelist/: Cargo.toml
plugins/discord_whitelist/src/: handler.rs  module.rs  queries.rs  schema.rs
plugins/drg/: Cargo.toml
plugins/drg/src/: module.rs  reqwest.rs
plugins/steam/: Cargo.toml
procmacro/: Cargo.toml
procmacro/src/: module.rs
proctest/: Cargo.toml
proctest/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs
