[workspace]
members = ["core", "modules/*", "runtime"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# local crates
neko_core = { path = "core" }
neko_cron = { path = "modules/cron" }
# external crates
axum = "0.6"
chrono = "0.4"
fluent = "0.16"
futures = "0.3"
intl-memoizer = "0.5"
log = "0.4"
poise = "0.5"
pretty_env_logger = "0.5"
reqwest = "0.11"
rust-embed = { version = "8", features = ["compression"] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres"] }
serde = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.9"
unicode-truncate = "0.2"
