[package]
name = "neko_drg"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/module.rs"

[dependencies]
# local crates
neko_core.workspace = true
neko_reqwest.workspace = true
neko_poise.workspace = true
# external crates
chrono.workspace = true
serde.workspace = true
